--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -29,19 +29,24 @@
             </div>
             <div class="navbar-header" style="padding-top:8px;padding-bottom:8px;box-sizing:border-box;height:50px;">
                 <div class="header-search">
-                    <input type="text" id="txt_search"  placeholder="搜索"  readonly onfocus="this.removeAttribute('readonly');" autocomplete="off" />
+                    <input type="text" id="txt_search" placeholder="搜索" readonly onfocus="this.removeAttribute('readonly');" autocomplete="off" />
                     <div class="header-search-btn">
                         <img style="width:20px;height:20px;" src="../fonts/Search_24.14055636896px_1181298_easyicon.net.png" />
                     </div>
                 </div>
             </div>
-            <div style="float:right;">
-                <a href="javascript:;" class="a_rightTop" id="a_login" style="" onclick="ShowLoginDlg()">登录</a>
-                <span id="_shuxian" style="font-size: 16px;line-height: 50px;">|</span>
-                <a href="javascript:;" class="a_rightTop" id="a_reg" onclick="ShowRegDlg()">注册</a>
-                <a href="/Personal" class="a_rightTop" id="a_user" style="display:none;"></a>
-                <span id="_shuxian2" style="font-size: 16px;line-height: 50px;display:none;">|</span>
-                <a href="javascript:;" class="a_rightTop" id="a_logout" style="display:none;">注销</a>
+            <div id="right_top_float" style="float:right;display:none;">
+                <div id="div_login_panel" style="display:inline-block">
+                    <a href="javascript:;" class="a_rightTop" id="a_login" style="" onclick="ShowLoginDlg()">登录</a>
+                    <span id="_shuxian" style="font-size: 16px;line-height: 50px;">|</span>
+                    <a href="javascript:;" class="a_rightTop" id="a_reg" onclick="ShowRegDlg()">注册</a>
+                </div>
+                <div id="div_login_ed_panel" style="display:inline-block;display:none;">
+                    <img id="head_right_top" style="width:36px;height:36px;border-radius:18px;margin-right:2px;cursor:pointer;" onclick="location.href='/Personal'" src="@Html.Raw(ViewBag.UserAsset == null ? "" : ViewBag.UserAsset.HeadIcon)" />
+                    <a href="/Personal" class="a_rightTop" id="a_user"></a>
+                    <span id="_shuxian2" style="font-size: 16px;line-height: 50px;">|</span>
+                    <a href="javascript:;" class="a_rightTop" id="a_logout">注销</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -107,6 +112,14 @@
 
         var user = '@ViewBag.User';
         user = unescape(user.replace(/&#x/g, '%u').replace(/;/g, ''));
+
+        var asset = '@ViewBag.UserAssetJson';
+
+        if (asset != 'null') {
+            asset = JSON.parse(asset.replace(/&quot;/gi, '"'));
+        } else {
+            asset = null;
+        }
 
         function getStyle(obj, styleName) {
             if (obj.currentStyle) { return obj.currentStyle[styleName]; } else {
@@ -190,11 +203,41 @@
                 }
             });
 
+            $('.btnUploadHead').click(function () {
+                $('[name=file]').click();
+            });
+            $('[name=file]').on('change', function () {
+                doUploadHead();
+            });
 
             if (user != '') {
                 ShowAfterLogin();
             }
+            $('#right_top_float').show();
         });
+
+        function doUploadHead() {
+            var formData = new FormData($("#uploadForm")[0]);
+            //console.log(formData);
+            $.ajax({
+                url: '../api/Personal/UploadHead',
+                type: 'POST',
+                data: formData,
+                async: false,
+                cache: false,
+                contentType: false,
+                processData: false,
+                success: function (res) {
+                    asset.HeadIcon = res.data;
+                    $('#head_right_top').attr('src', res.data);
+                    $('#img_head_icon').attr('src', res.data);
+                    layer.msg('修改成功');
+                },
+                error: function (res) {
+                    layer.msg(res.message);
+                }
+            });
+        }
 
         function Login(username , pwd ,code) {
             $.post('../api/User/Login', {
@@ -203,24 +246,30 @@
             }, function(res) {
                 if (res.success) {
                     layer.closeAll();
-                    user = res.data.userName;
+                    $('#imgCode').click();
+                    user = res.data[0].userName;
+                    asset = res.data[1];
+                    $('#head_right_top').attr('src', asset.headIcon);
                     ShowAfterLogin();
                 } else {
                     layer.msg(res.message);
+                    $('#imgCode').click();
                 }
             });
         }
 
         function ShowAfterLogin() {
-            $('#a_login,#a_reg,#_shuxian').hide();
-            $('#a_user').text(user).show();
-            $('#_shuxian2').show();
+            $('#div_login_panel').hide();
+            $('#a_user').text(user);
+            $('#div_login_ed_panel').show();
             $("#a_logout").show().off('click').on('click', function () {
                 $.post('../api/User/LogOut', {}, function (res) {
                     if (res.success) {
-                        $('#a_login,#a_reg,#_shuxian').show();
-                        $('#a_logout,#a_user,#_shuxian2').hide();
+                        window.location.href = "/";
+                        $('#div_login_panel').show();
+                        $('#div_login_ed_panel').hide();
                         user = '';
+                        asset = null;
                     } else {
                         layer.msg(res.message);
                     }
@@ -234,12 +283,14 @@
             $('#validCode').val('');
             $('#divReg').hide();
             $('#divLogin').show();
-            $('#imgCode').click();
             layer.open({
                 type: 1,
                 title: '登录',
                 content: $('#divLoginAndReg'),
-                area: ['420px', '260px']
+                area: ['420px', '260px'],
+                cancel: function () {
+                    $('#imgCode').click();
+                }
 
             });
         }
@@ -258,7 +309,6 @@
 
             });
         }
-
     </script>
 
 
