--- a/Views/Personal/Index.cshtml
+++ b/Views/Personal/Index.cshtml
@@ -35,20 +35,25 @@
                     </div>
                 </div>
             </div>
-            <div style="float:right;">
-                <a href="javascript:;" class="a_rightTop" id="a_login" style="" onclick="ShowLoginDlg()">登录</a>
-                <span id="_shuxian" style="font-size: 16px;line-height: 50px;">|</span>
-                <a href="javascript:;" class="a_rightTop" id="a_reg" onclick="ShowRegDlg()">注册</a>
-                <a href="/Personal" class="a_rightTop" id="a_user" style="display:none;"></a>
-                <span id="_shuxian2" style="font-size: 16px;line-height: 50px;display:none;">|</span>
-                <a href="javascript:;" class="a_rightTop" id="a_logout" style="display:none;">注销</a>
+            <div id="right_top_float" style="float:right;">
+                <div id="div_login_panel" style="display:inline-block">
+                    <a href="javascript:;" class="a_rightTop" id="a_login" style="" onclick="ShowLoginDlg()">登录</a>
+                    <span id="_shuxian" style="font-size: 16px;line-height: 50px;">|</span>
+                    <a href="javascript:;" class="a_rightTop" id="a_reg" onclick="ShowRegDlg()">注册</a>
+                </div>
+                <div id="div_login_ed_panel" style="display:inline-block;display:none;">
+                    <img id="head_right_top" style="width:36px;height:36px;border-radius:18px;margin-right:2px;cursor:pointer;" onclick="location.href='/Personal'" src="@ViewBag.UserAsset.HeadIcon" />
+                    <a href="/Personal" class="a_rightTop" id="a_user"></a>
+                    <span id="_shuxian2" style="font-size: 16px;line-height: 50px;">|</span>
+                    <a href="javascript:;" class="a_rightTop" id="a_logout">注销</a>
+                </div>
             </div>
         </div>
     </nav>
 
 
-    <div class="container" style="margin-top:62px;">
-        <div class="main_div" style="width:80%;margin:0 auto 0 auto; background-color:rgba(255, 255, 255, 0.95);min-height:850px;position:relative;">
+    <div class="container" style="margin-top:66px;">
+        <div class="main_div" style="width:80%;margin:0 auto 0 auto; background-color:rgba(255, 255, 255, 0.95);min-height:890px;position:relative;">
             <div class="divLeftNav">
                 <div class="left-nav-header">个人中心</div>
                 <div class="left-nav-item active">
@@ -58,18 +63,58 @@
                 </div>
             </div>
             <div style="margin-left:180px;position:relative;">
+
                 <div class="main_content">
                     <div class="div_set_header">
                         <img style="width:120px;height:120px;border-radius:60px;" id="img_head_icon" src="@ViewBag.UserAsset.HeadIcon" />
-                        <div class="btnUploadHead">修改头像</div>
-                        <div style="display:none;">
+                        <div class="btnUploadHead">修改头像</div><div style="display:none;">
                             <form id="uploadForm">
                                 <input type="file" name="file" />
                             </form>
+                        </div>
+                        <div class="head_mask">
 
                         </div>
                     </div>
+                    <div style="position:absolute;height:120px;left:154px;top:20px;">
+                        <div>
+                            <span class="personal_username">
+                                @ViewBag.User
+                            </span>
+                            <span class="@Html.Raw(ViewBag.UserAsset.Sex == "男" ? "personal_male" : "personal_female")"></span>
+                        </div>
+                        <div>
+                            <span class="personal_age">
+                                @ViewBag.UserAsset.Age
+                                岁
+                                &nbsp;&nbsp;&nbsp;
+                                @Html.Raw((ViewBag.UserAsset.Sign == "" || ViewBag.UserAsset.Sign == null) ? "你还没编辑个性签名。" : ViewBag.UserAsset.Sign)
+                                &nbsp;&nbsp;&nbsp;
+                                <a href="/Personal/EditInfo" style="color:#09f;">编辑资料</a>
+                            </span>
+                        </div>
+                        <div style="margin-top:5px;">
+                            <span style="font-size:12px;color:#333;font-family: Microsoft Yahei,Hiragino Sans GB,WenQuanYi Micro Hei,sans-serif;">
+                                LV
+                                @ViewBag.UserAsset.Level
+                                &nbsp;
+                                @*exp
+                                    @ViewBag.UserAsset.Exp*@
 
+                            </span>
+                        </div>
+                        <div style="margin-top:5px;">
+                            <span class="personal_age">
+                                金币:@{
+                                    int gold = (int)((decimal)ViewBag.UserAsset.Gold);
+                                    int silver = (int)((decimal)ViewBag.UserAsset.Silver);
+                                }
+                                @gold
+                                &nbsp;&nbsp;&nbsp;
+                                银币:@silver
+                            </span>
+                        </div>
+                    </div>
                     @*<img style="width:120px;height:120px;border-radius:60px;" src="~/upload/QQ图片20190402215023.jpg" />*@
                 </div>
             </div>
@@ -227,7 +272,7 @@
                 }
             });
 
-            $('.btnUploadHead').click(function () {
+            $('#img_head_icon,.btnUploadHead,.head_mask').click(function () {
                 $('[name=file]').click();
             });
             $('[name=file]').on('change', function () {
@@ -237,11 +282,12 @@
             if (user != '') {
                 ShowAfterLogin();
             }
+            $('#right_top_float').show();
         });
 
         function doUploadHead() {
             var formData = new FormData($("#uploadForm")[0]);
-            console.log(formData);
+            //console.log(formData);
             $.ajax({
                 url: '../api/Personal/UploadHead',
                 type: 'POST',
@@ -252,7 +298,9 @@
                 processData: false,
                 success: function (res) {
                     asset.HeadIcon = res.data;
+                    $('#head_right_top').attr('src', res.data);
                     $('#img_head_icon').attr('src', res.data);
+                    layer.msg('修改成功');
                 },
                 error: function (res) {
                     layer.msg(res.message);
@@ -268,7 +316,9 @@
                 if (res.success) {
                     layer.closeAll();
                     $('#imgCode').click();
-                    user = res.data.userName;
+                    user = res.data[0].userName;
+                    asset = res.data[1];
+                    $('#head_right_top').attr('src', asset.headIcon);
                     ShowAfterLogin();
                 } else {
                     layer.msg(res.message);
@@ -278,15 +328,15 @@
         }
 
         function ShowAfterLogin() {
-            $('#a_login,#a_reg,#_shuxian').hide();
-            $('#a_user').text(user).show();
-            $('#_shuxian2').show();
+            $('#div_login_panel').hide();
+            $('#a_user').text(user);
+            $('#div_login_ed_panel').show();
             $("#a_logout").show().off('click').on('click', function () {
                 $.post('../api/User/LogOut', {}, function (res) {
                     if (res.success) {
                         window.location.href = "/";
-                        $('#a_login,#a_reg,#_shuxian').show();
-                        $('#a_logout,#a_user,#_shuxian2').hide();
+                        $('#div_login_panel').show();
+                        $('#div_login_ed_panel').hide();
                         user = '';
                     } else {
                         layer.msg(res.message);
