--- a/Views/Room/Index.cshtml
+++ b/Views/Room/Index.cshtml
@@ -31,19 +31,24 @@
             </div>
             <div class="navbar-header" style="padding-top:8px;padding-bottom:8px;box-sizing:border-box;height:50px;">
                 <div class="header-search">
-                    <input type="text" id="txt_search"  placeholder="搜索"  readonly onfocus="this.removeAttribute('readonly');" autocomplete="off" />
+                    <input type="text" id="txt_search" placeholder="搜索" readonly onfocus="this.removeAttribute('readonly');" autocomplete="off" />
                     <div class="header-search-btn">
                         <img style="width:20px;height:20px;" src="../fonts/Search_24.14055636896px_1181298_easyicon.net.png" />
                     </div>
                 </div>
             </div>
-            <div style="float:right;">
-                <a href="javascript:;" class="a_rightTop" id="a_login" style="" onclick="ShowLoginDlg()">登录</a>
-                <span id="_shuxian" style="font-size: 16px;line-height: 50px;">|</span>
-                <a href="javascript:;" class="a_rightTop" id="a_reg" onclick="ShowRegDlg()">注册</a>
-                <a href="/Personal" class="a_rightTop" id="a_user" style="display:none;"></a>
-                <span id="_shuxian2" style="font-size: 16px;line-height: 50px;display:none;">|</span>
-                <a href="javascript:;" class="a_rightTop" id="a_logout" style="display:none;">注销</a>
+            <div id="right_top_float" style="float:right;display:none;">
+                <div id="div_login_panel" style="display:inline-block">
+                    <a href="javascript:;" class="a_rightTop" id="a_login" style="" onclick="ShowLoginDlg()">登录</a>
+                    <span id="_shuxian" style="font-size: 16px;line-height: 50px;">|</span>
+                    <a href="javascript:;" class="a_rightTop" id="a_reg" onclick="ShowRegDlg()">注册</a>
+                </div>
+                <div id="div_login_ed_panel" style="display:inline-block;display:none;">
+                    <img id="head_right_top" style="width:36px;height:36px;border-radius:18px;margin-right:2px;cursor:pointer;" onclick="location.href='/Personal'" src="@Html.Raw(ViewBag.UserAsset == null ? "" : ViewBag.UserAsset.HeadIcon)" />
+                    <a href="/Personal" class="a_rightTop" id="a_user"></a>
+                    <span id="_shuxian2" style="font-size: 16px;line-height: 50px;">|</span>
+                    <a href="javascript:;" class="a_rightTop" id="a_logout">注销</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -212,6 +217,16 @@
         var roomId = @ViewBag.ID;
         var user = '@ViewBag.User';
         user = unescape(user.replace(/&#x/g, '%u').replace(/;/g, ''));
+
+
+        var asset = '@ViewBag.UserAssetJson';
+
+        if (asset != 'null') {
+            asset = JSON.parse(asset.replace(/&quot;/gi, '"'));
+        } else {
+            asset = null;
+        }
+
        // console.log(roomId);
         var nowI = 5;
         var effectName = 'None',
@@ -385,12 +400,13 @@
             w.onmessage = function (evt) {
                 var s = evt.data;
                 var obj = JSON.parse(s);
-
                 addMessage(obj.sender + "&nbsp;:&nbsp;" + obj.message ,obj.color );
                 newAnimate(obj);
             };
             w.onopen = function () {
-                addMessage('成功连接弹幕服务器……','rgba(255,93,35,0.9)');
+                if (!_isMyReconnet) {
+                    addMessage('成功连接弹幕服务器……', 'rgba(255,93,35,0.9)');
+                }
                 _isMyReconnet = false;
             };
             w.onclose = function () {
@@ -521,6 +537,8 @@
             if (user != '') {
                 ShowAfterLogin();
             }
+
+            $('#right_top_float').show();
         });
 
         function Login(username , pwd ,code) {
@@ -530,7 +548,10 @@
             }, function(res) {
                 if (res.success) {
                     layer.closeAll();
-                    user = res.data.userName;
+                    console.log(res);
+                    user = res.data[0].userName;
+                    asset = res.data[1];
+                    $('#head_right_top').attr('src', asset.headIcon);
                     if (ws) {
                         _isMyReconnet = true;
                         ws.close();
@@ -545,16 +566,17 @@
         }
 
         function ShowAfterLogin() {
-            $('#a_login,#a_reg,#_shuxian').hide();
-            $('#a_user').text(user).show();
-            $('#_shuxian2').show();
+            $('#div_login_panel').hide();
+            $('#a_user').text(user);
+            $('#div_login_ed_panel').show();
             $("#a_logout").show().off('click').on('click', function () {
                 $.post('../api/User/LogOut', {}, function (res) {
                     if (res.success) {
-                        $('#a_login,#a_reg,#_shuxian').show();
-                        $('#a_logout,#a_user,#_shuxian2').hide();
+                        $('#div_login_panel').show();
+                        $('#div_login_ed_panel').hide();
                         user = '';
-                        if (ws) {
+                        asset = null;
+                        if (ws && ws.readyState == WebSocket.OPEN) {
                             _isMyReconnet = true;
                             ws.close();
                             initWS();
