--- a/wwwroot/css/myStyle.css
+++ b/wwwroot/css/myStyle.css
@@ -514,10 +514,10 @@ input:-webkit-autofill {
     border-left: none;
     border-top: none;
     border-bottom: none;
-    border-right-width: 2px;
+    border-right: none;
     box-sizing: border-box;
-    border-right-color: #d4d4d4;
-    border-right-style: solid;
+    /*background-image: url('../fonts/menu_bg_19c3c53.jpg');*/
+    background: url('../fonts/menu_bg_19c3c53.jpg') repeat-y;
 }
 
 .left-nav-header {
@@ -572,12 +572,69 @@ input:-webkit-autofill {
     height: 28px;
     line-height: 30px;
     text-align: center;
-    background-color: white;
+    background-color: #f3f4f4;
     cursor: pointer;
     border-radius: 6px;
     display: none;
+    z-index: 1000
 }
 
 .div_set_header:hover .btnUploadHead {
     display: block;
+}
+
+.div_set_header:hover img_head_icon {
+    background-color: #000;
+}
+
+#img_head_icon:hover {
+    cursor: pointer;
+}
+
+#a_user:hover {
+    color: rgba(255,93,35,1);
+}
+
+
+.personal_username {
+    font-size: 25px;
+    font-weight: 400;
+}
+
+.personal_male {
+    display: inline-block;
+    background-repeat: no-repeat;
+    height: 12px;
+    width: 12px;
+    background-image: url('../fonts/male.png');
+}
+
+personal_female {
+    display: inline-block;
+    background-repeat: no-repeat;
+    height: 12px;
+    width: 12px;
+    background-image: url('../fonts/female.png');
+}
+
+.personal_age {
+    font-size: 12px;
+    color: #777;
+}
+
+.head_mask {
+    display: none;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 120px;
+    height: 120px;
+    z-index: 999;
+    border-radius: 60px;
+}
+
+.div_set_header:hover .head_mask {
+    background-color: rgba(0,0,0,0.4);
+    display: block;
+    cursor:pointer;
 }
