--- a/wwwroot/css/myStyle.css
+++ b/wwwroot/css/myStyle.css
@@ -689,3 +689,132 @@ input:-webkit-autofill {
         background-color: #f80;
         color: white;
     }
+
+.div_main_content_warp {
+    margin-top: 50px;
+    margin-left: 240px;
+    position: relative;
+}
+
+
+.div_main_content {
+    padding-top: 20px;
+    padding-left: 15px;
+}
+
+
+.div_room_item_container {
+    margin-top: 10px;
+}
+
+.div_romm_item {
+    display: block;
+    width: 277px;
+    height: 221px;
+    background-color: rgba(255, 255, 255, 0.95);
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 22px;
+    border-radius: 8px;
+}
+
+    .div_romm_item:hover {
+        transform: scaleX(1.08) scaleY(1.08) translateY(5px);
+        box-shadow: 0.2px 0.2px 0.5px #c4bdbd;
+        transition: ease-in 0.1s;
+    }
+
+
+.div_room_item_cover {
+    width: 100%;
+    height: 74%;
+    transition: all .3s ease-out;
+    position: relative;
+}
+
+.img_room_item_cover {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.div_room_item_bottom {
+    width: 100%;
+    padding-left: 10px;
+    padding-top: 4px;
+}
+
+.div_room_item_bottom_room_name {
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.div_romm_item:hover .div_room_item_bottom_room_name {
+}
+
+.div_room_item_bottom_head_row {
+    margin-top: 2px;
+}
+
+.div_room_item_bottom_head {
+    width: 24px;
+    height: 24px;
+    border-radius: 12px;
+}
+
+.div_room_item_bottom_anchor_name {
+    color: #999;
+    display: inline;
+    line-height: 24px;
+    padding-left: 2px;
+}
+
+
+.div_room_item_bottom_class {
+    display: block;
+    float: right;
+    margin-right: 10px;
+    font-size: 12px;
+    color: #f80;
+    line-height: 24px;
+}
+
+.img_room_item_cover_mask {
+    display: none;
+    background-color: rgba(0,0,0,0.5);
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 8px 8px 0 0;
+    transition: all .3s ease-out;
+}
+
+.div_romm_item:hover .img_room_item_cover_mask {
+    display: block;
+}
+
+.img_room_item_cover_mask_play {
+    clear: both;
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    opacity: 0;
+    width: 50px;
+    height: 50px;
+    margin: -25px 0 0 -25px;
+    transform: scale(2);
+    transition: all .3s ease-out;
+}
+
+
+
+.div_romm_item:hover .img_room_item_cover_mask_play {
+    display: block;
+    opacity: 1;
+    transform: scale(1);
+    transition: all .3s ease-out;
+}
