--- a/wwwroot/css/myStyle.css
+++ b/wwwroot/css/myStyle.css
@@ -138,13 +138,17 @@ a {
     text-decoration: none;
 }
 
-    .a_rightTop:hover {
-        color: rgba(255,93,35,1);
-    }
+._group_user:hover .a_rightTop {
+    color: rgba(255,93,35,1);
+}
 
-    .a_rightTop:visited {
-        color: #555;
-    }
+.a_rightTop:hover {
+    color: rgba(255,93,35,1);
+}
+
+.a_rightTop:visited {
+    color: #555;
+}
 
 .color_select {
     margin-top: 4px;
@@ -818,3 +822,92 @@ input:-webkit-autofill {
     transform: scale(1);
     transition: all .3s ease-out;
 }
+
+
+.padnel_head_right_top {
+    display: none;
+    position: absolute;
+    margin-left: -200px;
+    background-color: rgb(255,255,255);
+    width: 300px;
+    height: 400px;
+    border-radius: 8px;
+    box-shadow: 0 3px 8px 2px rgba(1,1,1,.2);
+    border-top: 2px solid #f80;
+}
+
+._group_user:hover + .padnel_head_right_top {
+    display: block;
+}
+
+.padnel_head_right_top:hover {
+    display: block;
+}
+
+
+.a_log_out {
+    padding-top: 10px;
+    font-size: 12px;
+    color: #666;
+    float: right;
+    margin-right: 15px;
+    vertical-align: middle;
+}
+
+    .a_log_out:hover {
+        font-size: 12px;
+        color: #f80;
+    }
+
+    .a_log_out:visited {
+        color: #666;
+    }
+
+.header-exit-icon {
+    vertical-align: middle;
+    display: inline-block;
+    background-image: url('../fonts/header_z_5f9d5c4.png');
+    width: 17px;
+    height: 15px;
+    background-position: -6px -420px;
+    background-position-x: -6px;
+    background-position-y: -420px;
+}
+
+.a_log_out span {
+    padding-top: 1px;
+    padding-left: 3px;
+    vertical-align: middle;
+    line-height: 15px;
+    height: 15px;
+    display: inline-block;
+}
+
+.div_arrow {
+    width: 14px;
+    height: 7px;
+    background-image: url('../fonts/header_z_5f9d5c4.png');
+    background-position: -9px 0px;
+    background-position-x: -9px;
+    background-position-y: 0px;
+    z-index: 20000;
+}
+
+
+.padnel_head_right_top .div_arrow {
+    position: absolute;
+    top: -7px;
+    right: 74px;
+}
+
+._a_edit_sign {
+    color: #777;
+}
+
+    ._a_edit_sign:visited {
+        color:#777;
+    }
+
+    ._a_edit_sign:hover {
+        color: #09f;
+    }
